# JustChat

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/include/: tcp_client.h
Client/src/: main.cpp  tcp_client.cpp
Server/: CMakeLists.txt
Server/include/: tcp_connection.h  tcp_server.h
Server/src/: main.cpp  tcp_connection.cpp  tcp_server.cpp
